cia-view/src/main/resources/public/styles/main.css
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

/*
 * -- BASE STYLES --
 * Most of these are inherited from Base, but I want to change a few.
 */
body {
    line-height: 1.7em;
    color: #7f8c8d;
    font-size: 13px;
}

h1,
h2,
h3,
h4,
h5,
h6,
label {
    color: #34495e;
}

.pure-img-responsive {
    max-width: 100%;
    height: auto;
}

/*
 * -- LAYOUT STYLES --
 * These are some useful classes which I will need
 */
.l-box {
    padding: 1em;
}

.l-box-lrg {
    padding: 2em;
    border-bottom: 1px solid rgba(0,0,0,0.1);
}

.is-center {
    text-align: center;
}



/*
 * -- PURE FORM STYLES --
 * Style the form inputs and labels
 */
.pure-form label {
    margin: 1em 0 0;
    font-weight: bold;
    font-size: 100%;
}

.pure-form input[type] {
    border: 2px solid #ddd;
    box-shadow: none;
    font-size: 100%;
    width: 100%;
    margin-bottom: 1em;
}

/*
 * -- PURE BUTTON STYLES --
 * I want my pure-button elements to look a little different
 */
.pure-button {
    background-color: #1f8dd6;
    color: white;
    padding: 0.5em 2em;
    border-radius: 5px;
}

a.pure-button-primary {
    background: white;
    color: #1f8dd6;
    border-radius: 5px;
    font-size: 120%;
}


/*
 * -- MENU STYLES --
 * I want to customize how my .pure-menu looks at the top of the page
 */

.home-menu {
    padding: 0.5em;
    text-align: center;
    box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
}
.home-menu {
    background: #2d3e50;
}
.pure-menu.pure-menu-fixed {
    /* Fixed menus normally have a border at the bottom. */
    border-bottom: none;
    /* I need a higher z-index here because of the scroll-over effect. */
    z-index: 4;
}

.home-menu .pure-menu-heading {
    color: white;
    font-weight: 400;
    font-size: 120%;
}

.home-menu .pure-menu-selected a {
    color: white;
}

.home-menu a {
    color: #6FBEF3;
}
.home-menu li a:hover,
.home-menu li a:focus {
    background: none;
    border: none;
    color: #AECFE5;
}

.content-wrapper {
    /* These styles are required for the "scroll-over" effect */
    position: absolute;
    top: 100px;
    width: 100%;
    min-height: 12%;
    z-index: 2;
    background: white;

}

/* This is the class used for the main content headers (<h2>) */
.content-head {
    font-weight: 400;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    margin: 2em 0 1em;
}

/* This is a modifier class used when the content-head is inside a ribbon */
.content-head-ribbon {
    color: white;
}

/* This is the class used for the content sub-headers (<h3>) */
.content-subhead {
    color: #1f8dd6;
}
    .content-subhead i {
        margin-right: 7px;
    }

/* This is the class used for the dark-background areas. */
.ribbon {
    background: #2d3e50;
    color: #aaa;
}

/* This is the class used for the footer */
.footer {
    background: #111;
}

/*
 * -- TABLET (AND UP) MEDIA QUERIES --
 * On tablets and other medium-sized devices, we want to customize some
 * of the mobile styles.
 */
@media (min-width: 48em) {

    /* We increase the body font size */
    body {
        font-size: 16px;
    }
    /* We want to give the content area some more padding */
    .content {
        padding: 1em;
    }

    /* We can align the menu header to the left, but float the
    menu items to the right. */
    .home-menu {
        text-align: left;
    }
        .home-menu ul {
            float: right;
        }

    /* We increase the height of the splash-container */
/*    .splash-container {
        height: 500px;
    }*/

    /* We decrease the width of the .splash, since we have more width
    to work with */
    .splash {
        width: 50%;
        height: 50%;
    }

    .splash-head {
        font-size: 250%;
    }


    /* We remove the border-separator assigned to .l-box-lrg */
    .l-box-lrg {
        border: none;
    }

}

/*
 * -- DESKTOP (AND UP) MEDIA QUERIES --
 * On desktops and other large devices, we want to over-ride some
 * of the mobile and tablet styles.
 */
@media (min-width: 78em) {
    /* We increase the header font size even more */
    .splash-head {
        font-size: 300%;
    }
}

a
{
    color: #3b8bba;
    text-decoration: none;
}

a:visited
{
    color: #265778;
}

.content-margin
{
    margin-top: 10em;
}

.ranked-table
{
    width: 50%;
    margin: auto;
}

.ranked-name
{
    margin-left: 3.5em;
    line-height: 48px;
    font-weight: bold;
    font-size: 18px;
}

.ranked-name-container
{
    height: 48px;
}

.rank-image-container
{
    width: 48px;
    height: 48px;
    position: relative;
    background-color: rgba(0, 0, 0, 0.15);
    border-radius: 50%;
    float: right;
    margin-right: 3.5em;
}

.rank-image
{
    width: 100%;
    height: 100%;
}

.rank-row
{
    margin: 10px 0 10px 0;
    background-color: rgba(0, 148, 255, 0.15);
    border-radius: 3px;
    padding: 10px 0 10px 0;
}

.rank-row:nth-child(even)
{
    background-color: rgba(0, 127, 127, 0.15);
}

.rank-number
{
    position: absolute;
    right: 0;
    width: 100%;
    text-align: center;
    line-height: 48px;
    color: white;
    top: 12px;
    font-weight: bold;
    font-size: 24px;
}

.normal-number
{
    text-shadow: 0 0 4px deepskyblue;
}

.elite-number
{
    text-shadow: 0 0 4px gold;
}

@media (max-width: 1024px) {
    .rank-image-container
    {
        width: 32px;
        height: 32px;
        margin-right: 1em;
    }

    .ranked-name-container
    {
        height: 32px;
    }

    .ranked-name
    {
        margin-left: 1em;
        line-height: 32px;
        font-weight: bold;
        font-size: 14px;
    }

    .rank-number
    {
        line-height: 32px;
        top: 6px;
        font-size: 16px;
    }
}

